@@ -1,4 +1,9 @@
-2004-04-15  Jody Goldberg <jody@gnome.org>
+Mon Jun 21 17:41:23 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-window-manager.c (gnome_wm_settings_copy|free): add copy
+	and free functions for the WM settings.
+
+004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
 
